# distance-aided-raymarching-rs

./: .gitignore  Cargo.toml  README.md  render_config.toml
local/csg/: Cargo.toml
local/csg/src/: geometry.rs  lib.rs  scene.rs
local/csg/src/render/: distance.rs  mod.rs
src/: benchmark.rs  compute.rs  loading.rs  main.rs  render.rs  util.rs
src/shaders/: compute_image.wgsl
