[package]
name = "nairv_hw1_gpu"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.14.3", features = ["extern_crate_alloc", "derive"] }
env_logger = "0.11.2"
itertools = "0.12.1"
log = "0.4.20"
png = "0.17.13"
tokio = { version = "1.36.0", features = ["full"] }
wgpu = { version = "0.19.1", features = ["glsl"] }
csg = { version = "*", path = "local/csg" }
rayon = "1.8.1"
glam = "0.25.0"
clap = { version = "4.5.1", features = ["derive"] }
thiserror = "1.0.57"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.10"
serde_yaml = "0.9.32"
serde_json = "1.0.114"
